Return tests back to life (almost)

--- a/meson.build
+++ b/meson.build
@@ -13,6 +13,7 @@ project(
 src = [
     'source/main.cpp',
     'source/functions.cpp',
+    'source/test.cpp',
 ]
 
 docopt = library('docopt', 'lib/docopt/docopt.cpp')
@@ -24,11 +25,11 @@ rat = executable('rat',
 
 tests = [
     'AddToken test 1',
-    'Tokenize test 1',
-    'Tokenize test 2',
-    'Divide test 1',
+#     'Tokenize test 1',
+#     'Tokenize test 2',
+#     'Divide test 1',
     'Parse test 1',
-    'Convert test 1',
+#     'Convert test 1',
 ]
 
 foreach i : range(tests.length())
